Fix bug where footer width did not always span whole window on mobile

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -11,7 +11,11 @@ body {
     background-size: cover;
     background-attachment: var(--attachVar);
     min-height: 100%;
+    min-width: 100vw;
     position: relative;
+    display: inline-block;
+    align-items: center;
+    text-align: center;
 }
 
 @media screen and (hover: none) {
@@ -20,7 +24,11 @@ body {
         background-size: cover;
         background-attachment: fixed;
         min-height: 100%;
+        min-width: 100vw;
         position: relative;
+        display: inline-block;
+        align-items: center;
+        text-align: center;
     }
 }
 
@@ -32,6 +40,8 @@ body {
     margin-top: 2rem;
     margin-bottom: 2rem;
     min-width: min-content;
+    display: inline-block;
+    text-align: left;
 }
 
 .container > * {
@@ -62,6 +72,7 @@ button {
 
 .footer {
     position: absolute;
+    box-sizing: border-box;
     border-bottom: 0px;
     padding-bottom: 0px;
     margin-bottom: 0px;
@@ -69,6 +80,7 @@ button {
     z-index: 100;
     background: rgb(223, 255, 230, 0.95);
     text-align: center;
+    align-items: center;
     left: 0px;
     right: 0px;
     width: 100%;
@@ -76,10 +88,16 @@ button {
     min-height: min-content;
     border-radius: 3px;
     box-shadow: 0 -0.5px 2px 1px grey;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: pre-line;
 }
 
 .navbar-text {
     padding-top: 15px;
+    padding-left: 10px;
+    vertical-align: bottom;
+    text-align: center;
 }
 
 .footer-ghost {
@@ -144,6 +162,8 @@ button {
     bottom: 0;
     min-height: 100%;
     min-width: min-content;
+    align-content: center;
+    align-self: center;
 }
 
 .nav-link {
